--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,6 @@ mysqlclient==2.0.3
 django-bootstrap-breadcrumbs==0.9.2
 django-mathfilters==1.0.0
 django-seed==0.2.2
+djangorestframework==3.12.4
+channels==2.4.0
+channels-redis==2.4.2
